--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
                 "contact": {
                     "address": "Charleston, SC 29455",
                     "email": "aidan3martin@gmail.com",
-                    "github": "https://github.com/a1mart/"
+                    "github": "https://github.com/a1mart/",
+                    "linkedin": "https://www.linkedin.com/in/aidan-martin333/"
                 }
             },
             "experience": [
@@ -702,7 +703,17 @@
                         📧 Email
                     </a>
                     <a href="${resumeData.personal.contact.github}" class="contact-link" target="_blank" rel="noopener">
-                        💻 GitHub
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 .5C5.37.5 0 5.87 0 12.5c0 5.3 3.438 9.8 8.205 11.385.6.11.82-.26.82-.577v-2.234c-3.338.724-4.033-1.61-4.033-1.61-.546-1.39-1.333-1.758-1.333-1.758-1.09-.744.082-.729.082-.729 1.205.085 1.84 1.236 1.84 1.236 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.304.762-1.604-2.665-.304-5.466-1.335-5.466-5.933 0-1.31.468-2.38 1.235-3.22-.123-.304-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 0 1 3-.404c1.02.005 2.04.138 3 .404 2.292-1.552 3.297-1.23 3.297-1.23.655 1.649.242 2.872.12 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.922.43.37.823 1.102.823 2.222v3.293c0 .32.218.694.825.576C20.565 22.297 24 17.797 24 12.5 24 5.87 18.627.5 12 .5z"/>
+                        </svg>
+                        GitHub
+                    </a>
+
+                    <a href="${resumeData.personal.contact.linkedin}" class="contact-link" target="_blank" rel="noopener">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20.447 20.452H17.1v-5.569c0-1.327-.026-3.036-1.848-3.036-1.849 0-2.132 1.445-2.132 2.938v5.667H9.045V9h3.208v1.561h.045c.447-.847 1.539-1.737 3.168-1.737 3.39 0 4.016 2.231 4.016 5.134v6.494zM5.337 7.433a1.863 1.863 0 1 1 0-3.725 1.863 1.863 0 0 1 0 3.725zM6.855 20.452H3.819V9h3.036v11.452zM22.225 0H1.771C.792 0 0 .771 0 1.727v20.546C0 23.229.792 24 1.771 24h20.451C23.2 24 24 23.229 24 22.273V1.727C24 .771 23.2 0 22.225 0z"/>
+                        </svg>
+                        LinkedIn
                     </a>
                 `;
 
