--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     "location": "Long Branch, NJ",
                     "position": "Bartender",
                     "period": "2016 - 2022",
-                    "description": "Managed multiple roles as a bartender, waiter, and cook, serving large crowds of over 100 patrons. Boosted sales by 25% through targeted marketing strategies, menu enhancements, and improved customer service. Implemented and configured a Point-of-Sale system, automating monthly reporting and improving operational efficiency."
+                    "description": "Created a welcoming and lively atmosphere as a bartender, waiter, and cook at a busy Irish pub, serving and engaging with crowds of over 100 patrons. Enhanced guest experiences and boosted sales by 25% through thoughtful menu improvements, attentive service, and targeted promotions. Streamlined operations by implementing and configuring a Point-of-Sale system, automating reporting, and improving overall efficiency."
                 }
             ],
             "education": [
