--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKLYX8GDPT"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LKLYX8GDPT');
+    </script>
     
     <!-- Title & SEO -->
     <title>Aidan Martin — Software Engineer</title>
     <meta name="description" content="Portfolio and resume of Aidan Martin, Software Engineer. Explore projects, skills, and experience." />
-    
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="Aidan Martin, Software Engineer, Portfolio, Data Scientist, Projects, Resume" />
+    <meta name="author" content="Aidan Martin" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Aidan Martin Portfolio" />
+
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="assets/favicon.png" />
@@ -18,6 +33,12 @@
     <meta property="og:image" content="assets/profile.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://a1mart.github.io" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aidan Martin — Software Engineer" />
+    <meta name="twitter:description" content="Portfolio and resume of Aidan Martin, Software Engineer." />
+    <meta name="twitter:image" content="assets/profile.jpg" />
+
     <style>
         * {
             margin: 0;
@@ -462,7 +483,7 @@
                 "name": "Aidan Martin",
                 "degree": "",
                 "title": "Data Scientist",
-                "summary": "Skilled communicator and strategic problem-solver with a proven track record of bridging business and technology. Expert at engaging stakeholders to identify needs and translating them into actionable, high-impact solutions. Skilled in leveraging data analysis and technological insights to drive informed, data-driven decisions. Recognized for delivering results efficiently and creating meaningful outcomes that advance organizational objectives.",
+                "summary": "Skilled communicator and strategic problem-solver with a proven track record of bridging business and technology. Expert at engaging stakeholders to identify needs and translating those into actionable, high-impact solutions. Skilled at leveraging data analysis and technological insights to derive informed decisions. Recognized for delivering results efficiently and creating meaningful outcomes that advance organizational objectives.",
                 "contact": {
                     "address": "Charleston, SC 29455",
                     "email": "aidan3martin@gmail.com",
@@ -798,6 +819,24 @@
                 });
             });
         });
+    </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Aidan Martin",
+        "url": "https://a1mart.github.io",
+        "sameAs": [
+            "https://github.com/a1mart",
+            "https://www.linkedin.com/in/aidan-martin333/"
+        ],
+        "jobTitle": "Software Engineer",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "Independent"
+        }
+        }
     </script>
 </body>
 </html>
