--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 "name": "Aidan Martin",
                 "degree": "",
                 "title": "Data Scientist & Software Engineer",
-                "summary": "Experienced Data Scientist and Software Engineer with a proven track record of building scalable ML solutions and cloud infrastructure. Expert at translating business challenges into technical solutions that drive measurable impact.",
+                "summary": "Skilled communicator and strategic problem-solver with a proven track record of building scalable ML solutions and cloud infrastructure. Expert at translating business challenges into technical solutions that drive measurable impact.",
                 "contact": {
                     "address": "Charleston, SC 29455",
                     "email": "aidan3martin@gmail.com",
