--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     "location": "Tallahassee, FL",
                     "position": "Teaching Assistant",
                     "period": "2021 - 2022",
-                    "description": "Mentored undergraduate students and help office hours to support their learning. Evaluated assignments, proctored exams, and offered suggestions to improve course content."
+                    "description": "Mentored undergraduate students and held office hours to support their learning. Evaluated assignments, proctored exams, and offered suggestions to improve course content."
                 },
                 {
                     "company": "Celtic Cottage Pub and Patio Bar",
