--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     gtag('js', new Date());
     gtag('config', 'G-LKLYX8GDPT');
     </script>
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-9839484498146727">
     
     <!-- Title & SEO -->
     <title>Aidan Martin — Data Scientist & Software Engineer</title>
